--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,19 +1,34 @@
 <!DOCTYPE html>
+<html>
 <head>
 	<title>My first example page</title>
+
+	<meta charset="UTF-8">
+	<script>document.write('<script src="http://' + (location.host || '${1:localhost}').split(':')[0] + ':${2:35729}/livereload.js?snipver=1"></' + 'script>')</script>
 
 
 </head>
 
 <body>
-	<header>
-		<ul>
-			<li>Home</li>
-			<li>About</li>
-			<li>Help</li>
-			<li>Contact</li>
-		</ul>
-	</header>
+
+
+
+	<div class="header">
+		<div class="headerContent">
+			<h1> Viadrina </h1>
+		</div>
+			<div class="nav">
+				<ul>
+					<li><%= link_to "Home",   '#' %></li>
+					<li><%= link_to "About us",  '#' %></li>
+					<li><%= link_to "Music",   '#' %></li>
+					<li><%= link_to "Contact",  '#' %></li>
+				</ul>
+			</div>
+			<div class="headerBreak">
+			</div>
+		
+	</div>
 	
 
 
