--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -1,63 +1,108 @@
 /* global styling */
 
+* {
+	margin: 0;
+	padding: 0;
+}
+
 body {
-	background-image: url('assets/viadrina_logo.jpg');
-	background: #999;
-	font-family: "Trebuchet MS", Helvetica, sans-serif;
+	font-family: 'Trebuchet MS', Arial, sans-serif;
+	background-image: url('../images/homeworld8-1920x1080.jpg');
 }
 
 
-/* header styling */
+/* Navbar Styling */
+
+.navMenu {
+	width: 100%;
+	background-color: black;
+	height: 50px;
+	margin: 0 auto;
+	opacity: 0.5;
+	filter:alpha(opacity=50);
+	box-shadow: 0 0 2em black;
+	
+	ul {
+		height: 50px;
+		width: 820px;
+		margin: 0 auto;
+		
+
+
+	 	li {
+			list-style-type: none;
+			width: 150px; 
+			float: left;
+			margin: 0 20px 0 20px;
+			
+			a {
+				width: 150px;
+				text-decoration: none;
+				color: white;
+				line-height: 50px;
+				display: block;
+				text-align: center;
+
+				&:hover {
+					background-color: gray;
+					transition: width 0.45s, height 0.45s, background-color 0.45s, transform 0.45s;
+					opacity: 0.9;
+				}
+			}
+		}
+	}
+}
+
+/* Header Content */
 
 .headerContent {
-	width: 1024px;
-	height: auto;
-	margin: 0 auto;
+	margin: 20px auto;
+	width: 250px;
+	height: 250px;
+	border-radius: 50%;
+	box-shadow: 0 0 2em black;
+}
+
+.circleImage {
+	width: 250px;
+	height: 250px;
+	border-radius: 50%;
+}
+
+.outherCircle {
+	overflow: hidden;
+	border-radius: 50%;
+	width: 250px;
+	height: 250px;
+	position: relative;
+}
+
+.circleBorder {
+	position: absolute;
+	border-radius: 50%;
+	width: 200px;
+	height: 200px;
+	border: 25px solid rgba(150, 153, 166, 0.5);
+	top: 50%;
+	left: 50%;
+	margin: -125px 0 0 -125px;
+
+}
+
+.infoCircle {
+	position: absolute;
+	background: rgba(150, 153, 166, 0.5);
+	border-radius: 50%;
+	width: 200px;
+	height: 200px;
+	transition: all 0.5s ease-in-out;
+	top: 50%;
+	left: -250px;
+	margin: -100px 0 0 -100px;
 	text-align: center;
-
 }
 
-.nav {
-	max-width: 768px;
-	height: 40px;
-	background: #859CB7;
-	margin: auto;
-	border-radius: 20px;
-}
-
-.nav ul {
-	position: static;
-	margin: 0;
-	padding: 10px;
-	text-align: center;
-	box-shadow: 10px 10px 32px 0 #111;
-
-}
-
-.nav ul li {
-	list-style: none;
-	display: inline;
-	margin: auto;	
-}
-
-.nav ul li:hover {
-	background: #6B9597;
-	border-radius: 10px 10px 10px 10px;
-}
-
-.nav ul li a {
-	text-decoration: unset;
-	padding: 40px 40px;
-	color: black;
-}
-
-.nav ul li a:hover {
-	color: white;
-	text-decoration: overline underline;
-}
-
-.headerBreak {
-	width: 100%;
-	height: 0;
-	border-bottom: 2px solid black;
+.outherCircle:hover .infoCircle {
+	transition: all 0.5s ease-in-out;
+	left: 50%;
 }
