--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -6,12 +6,17 @@
 }
 
 body {
-	font-family: 'Trebuchet MS', Arial, sans-serif;
+	font-family: 'Open Sans', Arial, sans-serif;
 	background-image: url('../images/homeworld8-1920x1080.jpg');
 }
 
 
 /* Header Navbar Styling */
+
+.fixed {
+	position: fixed;
+	top: 0;
+}
 
 .navMenu {
 	width: 100%;
@@ -63,30 +68,28 @@ body {
 
 /* Footer Navbar */
 
-.fixedFooter {
+.footerDivider {
 	width: 100%;
 	position: fixed;
-	height: 50px;
+	height: 30px;
 	bottom: 0;
-	background-color: white;
+	background-color: black;
+	opacity: 0.5;
+	filter:alpha(opacity=50);
+	p {
+		float: right;
+		color: white;
+		padding: 8px 10px 10px 0;
 
-		ul {
-			position: relative;
-			float: right;
-			width: 200px;
-			height: 50px;
-			bottom: 10px;
-			right: 10px;
-			li {
-				list-style-type: none;
-				width: 150px; 
-				float: right;
-				padding: 0 20px 0 20px;
-				text-align: center;
-
-			}
-		}
+	}
 }
+
+#clock {
+	float: left;
+	color: white;
+	padding: 8px 0 10px 10px;
+}
+
 
 
 
@@ -123,7 +126,7 @@ body {
 	top: 50%;
 	left: 50%;
 	margin: -125px 0 0 -125px;
-	box-shadow: inset 0.3em 0.3em 0.9em black;
+	
 
 }
 
@@ -138,6 +141,9 @@ body {
 	left: -250px;
 	margin: -100px 0 0 -100px;
 	text-align: center;
+	h2 {
+		padding: 15px;
+	}
 }
 
 .outherCircle:hover .infoCircle {
@@ -157,6 +163,18 @@ body {
 	opacity: 0.2;
 	z-index: -1;
 	box-shadow: inset 0.3em 0.3em 0.9em black;
+	margin-top: 40px;
 
+	.mainText {
+		background-color: white;
+		position: relative;
+
+	
+	p {
+		opacity: 1;
+		padding: 15px;
+		
+	}
+}
 
 }
