--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,14 +9,14 @@
 <body>
 
 
-
+<div class='status'></div>
 	<div class="header">
 		<div class="headerContent">
 			<div class='outherCircle'>
 			<img class='circleImage' src='../images/headerImage.psd'>
 			<div class='circleBorder'>
 			<div class='infoCircle'>
-				<h2>Content here</h2>
+				<h2>Konrad Ślazyk</h2>
 				<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut"</p>
 				<span><a href='#'>a</a>
 				</div>
@@ -41,24 +41,24 @@
 			</div>
 	
 <div class='mainContent'>
+<div class='mainText'>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nibh augue, suscipit a, scelerisque sed, lacinia in, mi. Cras vel lorem. Etiam pellentesque aliquet tellus. Phasellus pharetra nulla ac diam. Quisque semper justo at risus. Donec venenatis, turpis vel hendrerit interdum, dui ligula ultricies purus, sed posuere libero dui id orci. Nam congue, pede vitae dapibus aliquet, elit magna vulputate arcu, vel tempus metus leo non est. Etiam sit amet lectus quis est congue mollis. Phasellus congue lacus eget neque. Phasellus ornare, ante vitae consectetuer consequat, purus sapien ultricies dolor, et mollis pede metus eget nisi. Praesent sodales velit quis augue. Cras suscipit, urna at aliquam rhoncus, urna quam viverra nisi, in interdum massa nibh nec erat.</p>
-
+</div>
 </div>
 
 
+<!-- footer -->
 
-<footer>
-	<div class='fixedFooter'>
-		<ul>
-			<li><img='../images/facebooklogo.png'></li>
-			<li>link 2</li>
-			<li>link 3</li>
-		</ul>
-
+	<div class='footerDivider'> 
+	<div id='copyright'></div>
+	<div id='clock'></div>
 	</div>
 
-</footer>
 
+<script type='text/javascript'>
+copyrightDate();
+timer();
+</script>
 
 
 </body>
