--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,66 +1,18 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>My first example page</title>
-
-
-</head>
-
-<body>
-
-
-<div class='status'></div>
-	<div class="header">
-		<div class="headerContent">
-			<div class='outherCircle'>
-			<img class='circleImage' src='../images/headerImage.psd'>
-			<div class='circleBorder'>
-			<div class='infoCircle'>
-				<h2>Konrad Ślazyk</h2>
-				<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut"</p>
-				<span><a href='#'>a</a>
-				</div>
-			</div>
-			</div>
-
-		</div>
-			<div class="navMenu">
-				<ul class='mainMenu'>
-					<li><%= link_to "Home",   '#' %></li>
-					<li class='navLink1'><%= link_to "About us",  '#' %>
-						<ul class='dropDownMenu'>
-							<li><%= link_to "Link 1",   '#' %></li>
-							<li><%= link_to "Link 2",   '#' %></li>
-							<li><%= link_to "Link 3",   '#' %></li>
-						</ul>
-					</li>
-					<li><%= link_to "Music",   '#' %></li>
-					<li><%= link_to "Contact",  '#' %></li>
-				</ul>
-		
-			</div>
-	
-<div class='mainContent'>
-<div class='mainText'>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nibh augue, suscipit a, scelerisque sed, lacinia in, mi. Cras vel lorem. Etiam pellentesque aliquet tellus. Phasellus pharetra nulla ac diam. Quisque semper justo at risus. Donec venenatis, turpis vel hendrerit interdum, dui ligula ultricies purus, sed posuere libero dui id orci. Nam congue, pede vitae dapibus aliquet, elit magna vulputate arcu, vel tempus metus leo non est. Etiam sit amet lectus quis est congue mollis. Phasellus congue lacus eget neque. Phasellus ornare, ante vitae consectetuer consequat, purus sapien ultricies dolor, et mollis pede metus eget nisi. Praesent sodales velit quis augue. Cras suscipit, urna at aliquam rhoncus, urna quam viverra nisi, in interdum massa nibh nec erat.</p>
+<div class='bodyHeader'>
+	<h2>About Me</h2>
 </div>
-</div>
-
-
-<!-- footer -->
-
-	<div class='footerDivider'> 
-	<div id='copyright'></div>
-	<div id='clock'></div>
+	<div class='mainContent'>
+		<div class='line'></div>
+		<p class='animateText'>I am bright, ambitious and self-motivated thinker who has a keen interest in all things related to the Internet and new technologies. I graduate Studies of Biotechnology with master degree, but I had always strong connection to work with computer software and  have an intense desire to learn how to work with webs core. In the past year I was looking  for opportunity to start learn programming. Unfortunately, during my work time it was not possible. At the beginning of this year I decided to devote all my time and energy to learn web development. I am a self directed and self managed person who is always pushing himself to deliver ongoing process improvements in anything he does. Right now I’m looking for suitable position that will allow me to learn as much as possible.</p>
+		<div class='line'></div>
 	</div>
 
 
-<script type='text/javascript'>
-copyrightDate();
-timer();
-</script>
 
 
-</body>
 
-</html>
+</div>
+
+
+
+
