--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -5,10 +5,7 @@
 	padding: 0;
 }
 
-body {
-	font-family: 'Open Sans', Arial, sans-serif;
-	background-image: url('../images/homeworld8-1920x1080.jpg');
-}
+
 
 
 /* Header Navbar Styling */
@@ -16,22 +13,26 @@ body {
 .fixed {
 	position: fixed;
 	top: 0;
+	z-index: 100;
+	right: 25%;
+	left: 25%;
 }
 
 .navMenu {
-	width: 100%;
-	background-color: black;
+	width: 780px;
+	background-color: rgba(0, 0, 0, 0.5);
 	height: 50px;
 	margin: 0 auto;
-	opacity: 0.5;
-	filter:alpha(opacity=50);
-	box-shadow: 0 0 2em black;
+	-webkit-box-shadow: 6px 15px 300px -7px rgba(0,0,0,0.75);
+	-moz-box-shadow: 6px 15px 300px -7px rgba(0,0,0,0.75);
+	box-shadow: 6px 15px 300px -7px rgba(0,0,0,0.75);
+	
 }
 	
 .mainMenu {
 	height: 50px;
-	width: 820px;
-	margin: 0 auto;
+	width: 780px;
+	
 		
 	li {
 		list-style-type: none;
@@ -39,6 +40,7 @@ body {
 		float: left;
 		padding: 0 20px 0 20px;
 		text-align: center;
+		margin: 0 auto;
 			
 		a {
 			width: 150px;
@@ -49,21 +51,24 @@ body {
 			
 
 			&:hover {
-				background-color: gray;
+				background-color: black;
 				transition: width 0.45s, height 0.45s, background-color 0.45s, transform 0.45s;
-				opacity: 0.9;
-				filter:alpha(opacity=90)
+				opacity: 0.8;
 			}
 		}
 	}
 }
 
-.dropDownMenu li {
-	text-align: center;
-	padding: 0;
-	background-color: black;
-	display: none;
-	z-index: 1;
+.dropDownMenu {
+	position: relative;
+	z-index: 100;
+	li {
+		text-align: center;
+		padding: 0;
+		background-color: rgba(0, 0, 0, 0.6);
+		display: none;
+	
+	}
 }
 
 /* Footer Navbar */
@@ -73,6 +78,7 @@ body {
 	position: fixed;
 	height: 30px;
 	bottom: 0;
+	left: 0;
 	background-color: black;
 	opacity: 0.5;
 	filter:alpha(opacity=50);
@@ -143,6 +149,13 @@ body {
 	text-align: center;
 	h2 {
 		padding: 15px;
+		color: white;
+		font-family: 'Open Sans', Arial, sans-serif;
+	}
+	p {
+		line-height: 200%;
+		color: white;
+		font-family: 'Open Sans', Arial, sans-serif;
 	}
 }
 
@@ -154,27 +167,84 @@ body {
 
 /* Main Content */
 
-.mainContent {
-	position: absolute;
-	height: 1500px;
-	background-color: gray;
-	right: 10%;
-	left: 10%;
-	opacity: 0.2;
-	z-index: -1;
-	box-shadow: inset 0.3em 0.3em 0.9em black;
-	margin-top: 40px;
 
-	.mainText {
-		background-color: white;
-		position: relative;
 
+body {
+	font-family: 'Open Sans', Arial, sans-serif;
+	background-image: url('../images/homeworld8-1920x1080.jpg');
+
+}
+
+
+.bodyHeader {
 	
-	p {
-		opacity: 1;
-		padding: 15px;
-		
+	height: 50px;
+	width: 778px;
+	text-align: center;
+	background-color: rgba(120, 124, 126, 0.8);
+	margin: 30px auto 0 auto;
+	-webkit-box-shadow: 6px 15px 72px 0px rgba(0,0,0,0.75);
+	-moz-box-shadow: 6px 15px 72px 0px rgba(0,0,0,0.75);
+	box-shadow: 6px 15px 72px 0px rgba(0,0,0,0.75);
+	z-index: -1;
+	border: 1px solid;
+	h2 {
+		position: absolute;
+		line-height: 200%;
+		color: white;
+		left: 25%;
+		right: 25%;
 	}
 }
 
+.line {
+	border: 1px solid;
+	color: white;
+	width: 674px;
+	margin: 10px;
+}
+
+.mainContent {
+	display: none;
+	height: 34%;
+	width: 700px;
+	background-color: rgba(120, 124, 126, 0.8);
+	padding: 40px;
+	z-index: -1;
+	margin: 35px auto;
+	-webkit-box-shadow: 6px 15px 72px 0px rgba(0,0,0,0.75);
+	-moz-box-shadow: 6px 15px 72px 0px rgba(0,0,0,0.75);
+	box-shadow: 6px 15px 72px 0px rgba(0,0,0,0.75);
+ 	p {
+		line-height: 200%;
+		color: white;
+		text-align: justify;
+		margin: 10px;
+	}
+}
+
+
+.skills li {
+	line-height: 200%;
+	color: white;
+	font-family: 'Open Sans', Arial, sans-serif;
+	text-align: left;
+	padding-left: 10px;
+
+}
+
+
+/* One site Page */
+
+
+#page1 {
+	height: 1000px;
+}
+
+#page2 {
+	height: 1000px;
+}
+
+#page3 {
+	height: 1000px;
 }
