--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -1,54 +1,55 @@
 /* global styling */
-
 * {
 	margin: 0;
 	padding: 0;
 }
 
-
-
+// *, *:before, *:after {
+// 	box-sizing: border-box;
+// }
 
 /* Header Navbar Styling */
-
-.fixed {
-	position: fixed;
-	top: 0;
-	z-index: 100;
-	right: 25%;
-	left: 25%;
-}
-
 .navMenu {
-	width: 780px;
 	background-color: rgba(0, 0, 0, 0.5);
-	height: 50px;
-	margin: 0 auto;
-	-webkit-box-shadow: 6px 15px 300px -7px rgba(0,0,0,0.75);
-	-moz-box-shadow: 6px 15px 300px -7px rgba(0,0,0,0.75);
 	box-shadow: 6px 15px 300px -7px rgba(0,0,0,0.75);
-	
+	height: 50px;
+	left: 0;
+	position: absolute;
+	right: 0;
+	top: 0;
+	width: 780px;
+	margin: 0 auto;
+
+	.navbar-fixed & {
+		position: fixed;
+		z-index: 100;
+	}
 }
-	
+
+.navMenuWrapper {
+	position: relative;
+}
+
 .mainMenu {
 	height: 50px;
 	width: 780px;
-	
-		
+
+
 	li {
-		list-style-type: none;
-		width: 150px; 
 		float: left;
+		list-style-type: none;
+		margin: 0 auto;
 		padding: 0 20px 0 20px;
 		text-align: center;
-		margin: 0 auto;
-			
+		width: 150px;
+
 		a {
 			width: 150px;
 			text-decoration: none;
 			color: white;
 			line-height: 50px;
 			display: block;
-			
+
 
 			&:hover {
 				background-color: black;
@@ -62,12 +63,13 @@
 .dropDownMenu {
 	position: relative;
 	z-index: 100;
+
 	li {
 		text-align: center;
 		padding: 0;
 		background-color: rgba(0, 0, 0, 0.6);
 		display: none;
-	
+
 	}
 }
 
@@ -79,9 +81,8 @@
 	height: 30px;
 	bottom: 0;
 	left: 0;
-	background-color: black;
-	opacity: 0.5;
-	filter:alpha(opacity=50);
+	background: rgba(0,0,0,0.5);
+
 	p {
 		float: right;
 		color: white;
@@ -124,29 +125,29 @@
 }
 
 .circleBorder {
-	position: absolute;
 	border-radius: 50%;
-	width: 200px;
-	height: 200px;
 	border: 25px solid rgba(150, 153, 166, 0.5);
-	top: 50%;
+	height: 200px;
 	left: 50%;
 	margin: -125px 0 0 -125px;
-	
+	position: absolute;
+	top: 50%;
+	width: 200px;
+
 
 }
 
 .infoCircle {
-	position: absolute;
 	background: rgba(150, 153, 166, 0.5);
 	border-radius: 50%;
-	width: 200px;
 	height: 200px;
-	transition: all 0.5s ease-in-out;
-	top: 50%;
 	left: -250px;
 	margin: -100px 0 0 -100px;
+	position: absolute;
 	text-align: center;
+	top: 50%;
+	transition: all 0.5s ease-in-out;
+	width: 200px;
 	h2 {
 		padding: 15px;
 		color: white;
@@ -171,23 +172,21 @@
 
 body {
 	font-family: 'Open Sans', Arial, sans-serif;
-	background-image: url('../images/homeworld8-1920x1080.jpg');
-
+	background: url('../images/homeworld8-1920x1080.jpg') repeat;
+	background-size: contain;
 }
 
 
 .bodyHeader {
-	
 	height: 50px;
 	width: 778px;
 	text-align: center;
 	background-color: rgba(120, 124, 126, 0.8);
-	margin: 30px auto 0 auto;
-	-webkit-box-shadow: 6px 15px 72px 0px rgba(0,0,0,0.75);
-	-moz-box-shadow: 6px 15px 72px 0px rgba(0,0,0,0.75);
+	margin: 100px auto 0 auto;
 	box-shadow: 6px 15px 72px 0px rgba(0,0,0,0.75);
 	z-index: -1;
 	border: 1px solid;
+
 	h2 {
 		position: absolute;
 		line-height: 200%;
@@ -212,8 +211,6 @@ body {
 	padding: 40px;
 	z-index: -1;
 	margin: 35px auto;
-	-webkit-box-shadow: 6px 15px 72px 0px rgba(0,0,0,0.75);
-	-moz-box-shadow: 6px 15px 72px 0px rgba(0,0,0,0.75);
 	box-shadow: 6px 15px 72px 0px rgba(0,0,0,0.75);
  	p {
 		line-height: 200%;
@@ -235,8 +232,6 @@ body {
 
 
 /* One site Page */
-
-
 #page1 {
 	height: 1000px;
 }
