--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,19 +13,21 @@
 			</div>
 
 		</div>
-			<div class="navMenu">
-				<ul class='mainMenu'>
-					<li><%= link_to "Home",   root_path %></li>
-					<li class='navLink1'><%= link_to "About me",  '#' %>
-						<ul class='dropDownMenu'>
-							<li><%= link_to "Skills",   skills_path %></li>
-							<li><%= link_to "Education",   education_path %></li>
-							<li><%= link_to "Interests",   '#interests' %></li>
-							
-						</ul>
-					</li>
-					<li><%= link_to "Music",   'https://soundcloud.com/viadrina' %></li>
-					<li><%= link_to "Contact",  '#contact' %></li>
-				</ul>
-		
+			<div class="navMenuWrapper">
+				<div class="navMenu">
+					<ul class='mainMenu'>
+						<li><%= link_to "Home",   root_path %></li>
+						<li class='navLink1'><%= link_to "About me",  '#' %>
+							<ul class='dropDownMenu'>
+								<li><%= link_to "Skills",   skills_path %></li>
+								<li><%= link_to "Education",   education_path %></li>
+								<li><%= link_to "Interests",   '#interests' %></li>
+
+							</ul>
+						</li>
+						<li><%= link_to "Music",   'https://soundcloud.com/viadrina' %></li>
+						<li><%= link_to "Contact",  '#contact' %></li>
+					</ul>
+
+				</div>
 			</div>
