--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <div class="header">
 		<div class="headerContent">
 			<div class='outherCircle'>
-			<img class='circleImage' src='../images/headerImage.psd'>
+			<img class='circleImage' src='../images/headerImage.png'>
 			<div class='circleBorder'>
 			<div class='infoCircle'>
 				<h2>Konrad Ślazyk</h2>
@@ -20,12 +20,13 @@
 						<ul class='dropDownMenu'>
 							<li><%= link_to "Skills",   skills_path %></li>
 							<li><%= link_to "Education",   education_path %></li>
-							<li><%= link_to "Interests",   '#interests' %></li>
+							<li><%= link_to "Interests",   interests_path %></li>
+							<li><%= link_to "Viadrina Covers", viadrinacovers_path %></li>
 							
 						</ul>
 					</li>
 					<li><%= link_to "Music",   'https://soundcloud.com/viadrina' %></li>
-					<li><%= link_to "Contact",  '#contact' %></li>
+					<li><%= link_to "Contact",  contact_path %></li>
 				</ul>
 		
 			</div>
