--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,22 +1,16 @@
-<!DOCTYPE html>
-<head>
-	<title>Contact Page</title>
+<div class='bodyHeader'>
+	<h2>Contact</h2>
+</div>
+	<div class='mainContent'>
+		<div class='line'></div>
+		<p>email: konrad.slazyk@gmail.com</p>
+		<p>phone: 0049 163 505 89 33</p>
+		<p>adress: Wisbyerstr. 22a 10439 Berlin</p>
+		<div class='line'></div>
+	</div>
 
 
-</head>
-
-<body>
-	<header>
-		<ul>
-			<li>Home</li>
-			<li>About</li>
-			<li>Help</li>
-			<li>Contact</li>
-		</ul>
-	</header>
-	
 
 
-</body>
 
-</html>
+</div>
