--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -211,7 +211,6 @@ body {
 	width: 700px;
 	background-color: rgba(120, 124, 126, 0.8);
 	padding: 40px;
-	z-index: -1;
 	margin: 35px auto;
 	-webkit-box-shadow: 6px 15px 72px 0px rgba(0,0,0,0.75);
 	-moz-box-shadow: 6px 15px 72px 0px rgba(0,0,0,0.75);
@@ -225,8 +224,22 @@ body {
 	}
 }
 
+.mainContentImg {
+	font-size: 0;
+	letter-spacing: -1px;
+	display: none;
+	height: 34%;
+	width: 700px;
+	background-color: rgba(120, 124, 126, 0.8);
+	padding: 40px;
+	margin: 35px auto;
+	-webkit-box-shadow: 6px 15px 72px 0px rgba(0,0,0,0.75);
+	-moz-box-shadow: 6px 15px 72px 0px rgba(0,0,0,0.75);
+	box-shadow: 6px 15px 72px 0px rgba(0,0,0,0.75);
+	text-align: center;
+}
+
 #educationTable {
-	
 	width: 100%;
 	margin: 0 auto;
     text-align: left;
@@ -271,10 +284,51 @@ td {
 /* Photos */
 
 .imgMin {
-	
+
 	width: 250px;
 	height: 250px;
 	-webkit-box-shadow: 6px 15px 72px 0px rgba(0,0,0,0.75);
 	-moz-box-shadow: 6px 15px 72px 0px rgba(0,0,0,0.75);
 	box-shadow: 6px 15px 72px 0px rgba(0,0,0,0.75);
+}
+
+
+.backdrop {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: #000;
+	opacity: .0;
+	filter: alpha(opacity=0);
+	z-index: 50;
+	display: none;
+}
+
+.box {
+	position: fixed;
+	top: 20%;
+	left: 30%;
+	width: 500px;
+	height: 500px;
+	background: #ffffff;
+	z-index: 51;
+	padding: 10px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+	-moz-box-shadow: 0 0 5px #444444;
+	-webkit-box-shadow: 0 0 5px #444444;
+	box-shadow: 0 0 5px #444444;
+	display: none;
+	color: black;
+	font-size: medium;
+	letter-spacing: normal;
+}
+
+.close {
+	float: right;
+	margin-right: 6px;
+	cursor: pointer;
 }
