--- a/app/views/static_pages/viadrinacovers.html.erb
+++ b/app/views/static_pages/viadrinacovers.html.erb
@@ -1,14 +1,25 @@
 <div class='bodyHeader'>
-	<h2>Viadria Covers</h2>
+	<h2>Viadrina Covers</h2>
 </div>
-	<div class='mainContent'>
+	<div class='mainContentImg'>
 		<div class='openerText'>
 			<p>Some of EP covers from Viadrina band.</p>
 		</div>
 
-		<img class='imgMin' src='../images/ViadrinaCovers/all-i-want.jpg' alt='all i want'>
+		<div class='backdrop'></div>
+		<div class='box'><div class='close'>x</div></div> 
+
+		<div class='line'></div>
+
+		<a href='#' class='lightbox'><img class='imgMin' src='../images/ViadrinaCovers/all-i-want.jpg' alt='all i want'></a>
+
+
 		<img class='imgMin' src='../images/ViadrinaCovers/better.jpg' alt='better'>
 		<img class='imgMin' src='../images/ViadrinaCovers/birds-remixes.jpg' alt='birds remixes'>
 		<img class='imgMin' src='../images/ViadrinaCovers/bodymind.jpg' alt='bodymind'>
-
+		<img class='imgMin' src='../images/ViadrinaCovers/pets.jpg' alt='pets'>
+		<img class='imgMin' src='../images/ViadrinaCovers/shining.jpg' alt='shining'>
+		<img class='imgMin' src='../images/ViadrinaCovers/still-alive.jpg' alt='still alive'>
+		<img class='imgMin' src='../images/ViadrinaCovers/its-ok.jpg' alt='its ok'>
+		<div class='line'></div>
 	</div>
