--- a/app/views/static_pages/viadrinacovers.html.erb
+++ b/app/views/static_pages/viadrinacovers.html.erb
@@ -7,19 +7,24 @@
 		</div>
 
 		<div class='backdrop'></div>
-		<div class='box'><div class='close'>x</div></div> 
+		<div class='box'></div> 
 
 		<div class='line'></div>
 
 		<a href='#' class='lightbox'><img class='imgMin' src='../images/ViadrinaCovers/all-i-want.jpg' alt='all i want'></a>
 
+		<a href='#' class='lightbox'><img class='imgMin' src='../images/ViadrinaCovers/better.jpg' alt='better'></a>
 
-		<img class='imgMin' src='../images/ViadrinaCovers/better.jpg' alt='better'>
-		<img class='imgMin' src='../images/ViadrinaCovers/birds-remixes.jpg' alt='birds remixes'>
-		<img class='imgMin' src='../images/ViadrinaCovers/bodymind.jpg' alt='bodymind'>
-		<img class='imgMin' src='../images/ViadrinaCovers/pets.jpg' alt='pets'>
-		<img class='imgMin' src='../images/ViadrinaCovers/shining.jpg' alt='shining'>
-		<img class='imgMin' src='../images/ViadrinaCovers/still-alive.jpg' alt='still alive'>
-		<img class='imgMin' src='../images/ViadrinaCovers/its-ok.jpg' alt='its ok'>
+		<a href='#' class='lightbox'><img class='imgMin' src='../images/ViadrinaCovers/birds-remixes.jpg' alt='birds remixes'></a>
+
+		<a href='#' class='lightbox'><img class='imgMin' src='../images/ViadrinaCovers/bodymind.jpg' alt='bodymind'></a>
+
+		<a href='#' class='lightbox'><img class='imgMin' src='../images/ViadrinaCovers/pets.jpg' alt='pets'></a>
+
+		<a href='#' class='lightbox'><img class='imgMin' src='../images/ViadrinaCovers/shining.jpg' alt='shining'></a>
+
+		<a href='#' class='lightbox'><img class='imgMin' src='../images/ViadrinaCovers/still-alive.jpg' alt='still alive'></a>
+
+		<a href='#' class='lightbox'><img class='imgMin' src='../images/ViadrinaCovers/its-ok.jpg' alt='its ok'></a>
 		<div class='line'></div>
 	</div>
