first code refractor and add highlight current site

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <!-- footer -->
 
-	<div class='footerDivider'> 
+<div class='footerDivider'> 
 	<div id='copyright'></div>
 	<div id='clock'></div>
 	</div>
@@ -8,5 +8,5 @@
 
 <script type='text/javascript'>
 copyrightDate();
-timer();
+footerClock();
 </script>
