--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <div class="header">
 		<div class="headerContent">
 			<div class='outherCircle'>
-			<img class='circleImage' src='../images/headerImage.png'>
+			<img class='circleImage' src='/assets/headerImage.png'>
 			<div class='circleBorder'>
 			<div class='infoCircle'>
 				<h2>Konrad Ślazyk</h2>
