--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -35,8 +35,8 @@
  		position: fixed;
 		z-index: 100;
 		top: 0;
-		right: 25%;
-		left: 25%;
+		right: 0%;
+		left: 0%;
 	}
 	
 }
@@ -52,7 +52,7 @@
 		float: left;
 		padding: 0 20px 0 20px;
 		text-align: center;
-		margin: 0 auto;
+		margin: 0 auto;	
 			
 		a {
 			width: 150px;
@@ -60,15 +60,18 @@
 			color: white;
 			line-height: 50px;
 			display: block;
-			
 
 			&:hover {
-				background-color: black;
+				background-color: #FFCC00;
 				transition: width 0.45s, height 0.45s, background-color 0.45s, transform 0.45s;
 				opacity: 0.8;
 			}
 		}
 	}
+}
+
+.current {
+	background-color: #669966;
 }
 
 .dropDownMenu {
@@ -185,7 +188,7 @@
 
 body {
 	font-family: 'Open Sans', Arial, sans-serif;
-	background-image: url('../images/homeworld8-1920x1080.jpg');
+	background: url('/assets/homeworld8-1920x1080.jpg') fixed;
 
 }
 
@@ -313,8 +316,8 @@ td {
 
 .box {
 	position: fixed;
-	top: 25%;
-	left: 30%;
+	top: 20%;
+	left: 33%;
 	width: 650px;
 	height: 650px;
 	background: #ffffff;
@@ -327,6 +330,8 @@ td {
 	letter-spacing: normal;
 	display: none;	
 	img {
+		width: 100%;
+		height: 100%;
 		max-width: 100%;
     	max-height: 100%;
 	}
