--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,12 +1,8 @@
 <!-- footer -->
-
-<div class='footerDivider'> 
-	<div id='copyright'></div>
-	<div id='clock'></div>
+<footer>
+	<div class='footerDivider'> 
+		<div id='copyright'></div>
+		<div id='clock'></div>
 	</div>
+</footer>
 
-
-<script type='text/javascript'>
-copyrightDate();
-footerClock();
-</script>
