--- a/app/views/static_pages/viadrinacovers.html.erb
+++ b/app/views/static_pages/viadrinacovers.html.erb
@@ -6,9 +6,9 @@
 			<p>Some of EP covers from Viadrina band.</p>
 		</div>
 
+		<!-- Lightbox -->
 		<div class='backdrop'></div>
-		<div class='box'></div> 
-
+			<div class='box'></div> 
 		<div class='line'></div>
 
 		<a href='#' class='lightbox'><img class='imgMin' src='../images/ViadrinaCovers/all-i-want.jpg' alt='all i want'></a>
