--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,18 +1,18 @@
-<div class="header">
+<header>
 		<div class="headerContent">
 			<div class='outherCircle'>
-			<img class='circleImage' src='/assets/headerImage.png'>
-			<div class='circleBorder'>
-			<div class='infoCircle'>
-				<h2>Konrad Ślazyk</h2>
-				<p>Web Developer</p>
-				<p>Nationality: Polish</p>
-				<p>Year of Birth: 1988</p>
-				</div>
+				<img class='circleImage' src='/assets/headerImage.png'>
+					<div class='circleBorder'>
+						<div class='infoCircle'>
+							<h2>Konrad Ślazyk</h2>
+								<p>Web Developer</p>
+								<p>Nationality: Polish</p>
+								<p>Year of Birth: 1988</p>
+						</div>
+					</div>
 			</div>
-			</div>
-
 		</div>
+			
 			<div class="navMenu">
 				<ul class='mainMenu'>
 					<li><%= link_to "Home",   root_path %></li>
@@ -22,12 +22,11 @@
 							<li><%= link_to "Education",   education_path %></li>
 							<li><%= link_to "Interests",   interests_path %></li>
 							<li><%= link_to "Viadrina Covers", viadrinacovers_path %></li>
-							
 						</ul>
 					</li>
 					<li><%= link_to "Music",   'https://soundcloud.com/viadrina' %></li>
 					<li><%= link_to "Contact",  contact_path %></li>
 				</ul>
-		
-			</div>
+		</div>
+</header>>
 
