--- a/app/views/static_pages/education.html.erb
+++ b/app/views/static_pages/education.html.erb
@@ -3,7 +3,7 @@
 </div>
 <div class='mainContent'>
 	<div class='line'></div>
-		<table id='educationTable'>
+		<table class='educationTable'>
 			<tbody>
 				<tr class='contentRow'>
 					<td class='schoolColumn'>
@@ -29,7 +29,7 @@
 							<li>West Pomeranian University of Technology</li>
 						</ul>
 					</td>
-					
+
 					<td class='yearColumn'>
 						<ul>
 							<li><strong>2007 - 2012</strong></li>
