--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
     <head>
       <title>Konrad Ślazyk</title>
         <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-        <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+        <%= javascript_include_tag :defaults, 'application', 'data-turbolinks-track' => true %>
         <%= csrf_meta_tags %>
         <%= render 'layouts/shim' %>
     </head>
