--- a/app/views/static_pages/viadrinacovers.html.erb
+++ b/app/views/static_pages/viadrinacovers.html.erb
@@ -12,21 +12,21 @@
 		<div class='line'></div>
 
 		<div class="lightboxWrapper">
-			<a href='#' class='lightbox'><img class='imgMin' src='../images/ViadrinaCovers/all-i-want.jpg' alt='all i want'></a>
+			<a href='#' class='lightbox'><img class='imgMin' src='/assets/ViadrinaCovers/all-I-want.jpg' alt='all i want'></a>
 
-			<a href='#' class='lightbox'><img class='imgMin' src='../images/ViadrinaCovers/better.jpg' alt='better'></a>
+			<a href='#' class='lightbox'><img class='imgMin' src='/assets/ViadrinaCovers/better.jpg' alt='better'></a>
 
-			<a href='#' class='lightbox'><img class='imgMin' src='../images/ViadrinaCovers/birds-remixes.jpg' alt='birds remixes'></a>
+			<a href='#' class='lightbox'><img class='imgMin' src='/assets/ViadrinaCovers/birds-remixes.jpg' alt='birds remixes'></a>
 
-			<a href='#' class='lightbox'><img class='imgMin' src='../images/ViadrinaCovers/bodymind.jpg' alt='bodymind'></a>
+			<a href='#' class='lightbox'><img class='imgMin' src='/assets/ViadrinaCovers/bodymind.jpg' alt='bodymind'></a>
 
-			<a href='#' class='lightbox'><img class='imgMin' src='../images/ViadrinaCovers/pets.jpg' alt='pets'></a>
+			<a href='#' class='lightbox'><img class='imgMin' src='/assets/ViadrinaCovers/pets.jpg' alt='pets'></a>
 
-			<a href='#' class='lightbox'><img class='imgMin' src='../images/ViadrinaCovers/shining.jpg' alt='shining'></a>
+			<a href='#' class='lightbox'><img class='imgMin' src='/assets/ViadrinaCovers/shining.jpg' alt='shining'></a>
 
-			<a href='#' class='lightbox'><img class='imgMin' src='../images/ViadrinaCovers/still-alive.jpg' alt='still alive'></a>
+			<a href='#' class='lightbox'><img class='imgMin' src='/assets/ViadrinaCovers/still-alive.jpg' alt='still alive'></a>
 
-			<a href='#' class='lightbox'><img class='imgMin' src='../images/ViadrinaCovers/its-ok.jpg' alt='its ok'></a>
+			<a href='#' class='lightbox'><img class='imgMin' src='/assets/ViadrinaCovers/its-ok.jpg' alt='its ok'></a>
 		</div>
 
 		<div class='line'></div>
